--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/proxy": "^2.1.0",
     "core-js": "^3.19.3",
+    "dotenv": "^16.0.3",
     "nuxt": "^2.15.8",
     "v-idle": "^0.2.1",
     "vue": "^2.6.14",
